# hermes-bridge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  get.sh  install.sh  pyproject.toml
docker/: entrypoint.sh
docker/s6-rc.d/bridge/: finish  run
docs/: openclaw-dual-backend-plan.md  phase1-verification.md
hermes_bridge/: __init__.py  agent_proxy.py  cli.py  hermes_env.py  models.py  persistence.py  server.py  skills.py
hermes_bridge/backends/: __init__.py  acp.py  base.py  hermes_direct.py  openclaw_local.py
tests/: conftest.py  test_backends.py  test_cli.py  test_hermes_env.py  test_models.py  test_persistence.py  test_skills.py
