[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-bridge-api"
version = "0.1.0"
description = "REST + SSE bridge API for Agentfy and mobile clients to chat with Hermes agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
hermes-bridge = "hermes_bridge.cli:main"

[tool.setuptools.packages.find]
include = ["hermes_bridge*"]
