[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-bridge-api"
version = "0.1.0"
description = "REST + SSE bridge API for Agentfy and mobile clients to chat with Hermes agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "jcnh74"}]
keywords = ["hermes", "agent", "bridge", "api", "sse", "agentfy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# QR code rendering for `hermes-bridge pair`
qr = ["qrcode[pil]>=7.0"]

[project.urls]
Homepage = "https://github.com/jcnh74/hermes-bridge"
Repository = "https://github.com/jcnh74/hermes-bridge"

[project.scripts]
hermes-bridge = "hermes_bridge.cli:main"

[tool.setuptools.packages.find]
include = ["hermes_bridge*"]
